<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_versions"
        android:icon="@drawable/ic_nav_versions"
        android:title="@string/nav_versions" />
    <item
        android:id="@+id/nav_accounts"
        android:icon="@drawable/ic_nav_accounts"
        android:title="@string/nav_accounts" />
    <item
        android:id="@+id/nav_multiplayer"
        android:icon="@drawable/ic_nav_multiplayer"
        android:title="@string/nav_multiplayer" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
