<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.booxin.launcher.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_versions"
        android:name="com.booxin.launcher.ui.versions.VersionsFragment"
        android:label="@string/nav_versions" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="com.booxin.launcher.ui.accounts.AccountsFragment"
        android:label="@string/nav_accounts" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.booxin.launcher.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
